--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "dependencies": {
-    "dappstea": "^1.0.0"
-  }
+    "dappstea": "^4.0.0"
+  },
+  "name": "dappstea",
+  "version": "4.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lensd11/dappstea.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lensd11/dappstea/issues"
+  },
+  "homepage": "https://github.com/lensd11/dappstea#readme",
+  "description": ""
 }
